fixed thai spacing issues in skit.js, skit.css

--- a/css/skit.css
+++ b/css/skit.css
@@ -297,6 +297,6 @@ footer {
     font-size: 195px;
 }
 
-.presenter-text {
+.thai-text {
     white-space: pre-wrap;
 }
